syntax = "proto3";

option go_package = "kitchen/common/orders";

message Order {
  int32 OrderID = 1;
  int32 CustomerID = 2;
  int32 ProductID = 3;
  int32 Quantity = 4;
}

message CreateOrderRequest {
  int32 CustomerID = 1;
  int32 ProductID = 2;
  int32 Quantity = 3;
}

message CreateOrderResponse { string Status = 1; }

message GetOrdersRequest { int32 CustomerID = 1; }

message GetOrdersResponse { repeated Order Orders = 1; }
